# transactions2pln

./: .editorconfig  .flake8  DEVELOPMENT.rst  LICENCE.txt  README.rst  Taskfile.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: build.yml  check.yml
src/tests/: test_main.py  test_script.py  test_utils.py
src/tests/data/: nbp_table.csv  transactions.csv  transactions_output.csv  transactions_output.json  transactions_with_labels.csv
src/transactions2pln/: __main__.py  exceptions.py  script.py  utils.py
test/: Dockerfile
